--- a/src/pages/MainBoard.module.css
+++ b/src/pages/MainBoard.module.css
@@ -88,6 +88,8 @@
   font-size: x-large;
   color: #7b64fd;
   border: none;
+  -webkit-box-shadow: 1px 1px 5px 1px #adadad;
+  box-shadow: 1px 1px 5px 1px #adadad;
 }
 
 .mainBoard_option {
@@ -100,7 +102,7 @@
 
 .option_all {
   margin-right: 10%;
-  border-bottom: 3px solid #A493FF;
+  border-bottom: 3px solid #a493ff;
 }
 
 .article {
@@ -109,7 +111,7 @@
 
 .article_title {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -122,7 +124,7 @@
   height: 35px;
   border-radius: 50%;
   border: 1px solid white;
-  background-image: url('./img/aboutme-pic.jpg');
+  background-image: url("./img/aboutme-pic.jpg");
   background-size: cover;
 }
 
@@ -143,7 +145,7 @@
   width: 100px;
   height: 100px;
   border-radius: 10px;
-  background-image: url('./img/jk-2.PNG');
+  background-image: url("./img/jk-2.PNG");
   background-size: cover;
 }
 
@@ -159,5 +161,4 @@
 
 .post_time {
   color: rgb(174, 172, 172);
-
 }
