--- a/src/pages/PersonalPage.module.css
+++ b/src/pages/PersonalPage.module.css
@@ -118,6 +118,13 @@
   font-size: 15px;
 }
 
+.del_edit_btn {
+  width: 40px;
+  display: flex;
+  justify-content: space-between;
+  color: rgb(85, 85, 85);
+}
+
 .chat_btn {
   width: 50px;
   height: 30px;
