--- a/src/pages/ProfileEdit.module.css
+++ b/src/pages/ProfileEdit.module.css
@@ -62,8 +62,8 @@
 }
 
 .profile_img {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   border: 1px solid white;
   background-image: url("./img/kelly.PNG");
@@ -108,6 +108,12 @@
   padding: 2.5%;
   margin-top: 2%;
   margin-bottom: 2%;
+  width: 319px;
+  height: 45px;
+  color: rgba(136, 136, 136, 1);
+  font-size: 14px;
+  border: 1px solid rgba(187, 187, 187, 1);
+  padding: 1%;
 }
 
 .btn_section {
