--- a/src/pages/SignInRegister.module.css
+++ b/src/pages/SignInRegister.module.css
@@ -30,6 +30,8 @@
   animation-delay: 0.5s;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
+  -webkit-box-shadow: 0px -3px 9px 4px rgba(0,0,0,0.5); 
+box-shadow: 0px -3px 9px 4px rgba(0,0,0,0.5);
 }
 
 @-webkit-keyframes slide {
@@ -63,9 +65,9 @@
   line-height: 1.1;
 }
 
-.subTitle {
-  transform: translate(30px, 40px);
-  font-weight: 200;
+.heart_icon {
+  font-size: 30px;
+  color: rgba(167, 152, 247, 1);;
 }
 
 .input_box {
