--- a/src/pages/Myinfo.module.css
+++ b/src/pages/Myinfo.module.css
@@ -31,6 +31,8 @@
   animation-delay: 0.5s;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
+  -webkit-box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
 }
 
 @-webkit-keyframes slide {
