--- a/src/pages/Myinfo.module.css
+++ b/src/pages/Myinfo.module.css
@@ -68,7 +68,7 @@
   height: 70px;
   border-radius: 50%;
   border: 1px solid white;
-  background-image: url("./img/kelly.PNG");
+  /* background-image: url("./img/kelly.PNG"); */
   background-size: cover;
 }
 
