--- a/src/pages/MyDashBoard.module.css
+++ b/src/pages/MyDashBoard.module.css
@@ -33,6 +33,11 @@
   border-top-right-radius: 40px;
   -webkit-box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
+  overflow-y: scroll;
+}
+
+.slide::-webkit-scrollbar{
+  display: none;
 }
 
 @-webkit-keyframes slide {
