--- a/src/pages/PersonalPage.module.css
+++ b/src/pages/PersonalPage.module.css
@@ -33,6 +33,11 @@
   border-top-right-radius: 40px;
   -webkit-box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
+  overflow-y: scroll;
+}
+
+.slide::-webkit-scrollbar {
+  display: none;
 }
 
 @-webkit-keyframes slide {
@@ -90,7 +95,7 @@
   width: 100px;
   height: 100px;
   border-radius: 10px;
-  background-image: url('./img/jk-2.PNG');
+  background-image: url("./img/jk-2.PNG");
   background-size: cover;
 }
 
@@ -132,7 +137,7 @@
   height: 35px;
   border-radius: 15px;
   font-size: 15px;
-  background-color: #A493FF;
+  background-color: #a493ff;
   border: none;
   color: white;
 }
@@ -141,9 +146,7 @@
   text-align: right;
   font-size: 16px;
   font-weight: 700;
-    color: rgb(85, 85, 85);
-
-
+  color: rgb(85, 85, 85);
 }
 
 .introduce > h5 {
@@ -151,7 +154,6 @@
   text-align: left;
   font-weight: 400;
   color: rgb(85, 85, 85);
-
 }
 
 .article_footer {
@@ -165,7 +167,7 @@
 }
 
 .like_heart {
-  color: #A493FF;
+  color: #a493ff;
 }
 
 .post_time {
@@ -182,5 +184,5 @@
 
 .option_all {
   margin-right: 10%;
-  border-bottom: 3px solid #A493FF;
+  border-bottom: 3px solid #a493ff;
 }
