--- a/src/pages/Chatting.module.css
+++ b/src/pages/Chatting.module.css
@@ -19,7 +19,7 @@
 }
 
 .slide {
-  position: absolute;
+  position: relative;
   /* bottom: -750px; */
   width: 390px;
   height: 650px;
@@ -85,8 +85,16 @@
 }
 
 .chat_section {
+  width: 100%;
+  height: 550px;
   overflow-y: scroll;
+  position: absolute;
 }
+
+.chat_section::-webkit-scrollbar{
+  display: none;
+}
+
 
 .chat_myAnswer {
   width: 70%;
@@ -133,7 +141,8 @@
 }
 
 footer {
-  transform: translate(0px, 450px);
+  
+  transform: translate(0px, 580px);
   display: flex;
   justify-content: center;
 
