--- a/src/pages/MainBoard.module.css
+++ b/src/pages/MainBoard.module.css
@@ -163,11 +163,13 @@
 }
 
 .article_content > div {
-  width: 100px;
+  width: 150px;
   height: 100px;
   border-radius: 10px;
   background-image: url("./img/jk-2.PNG");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .article_footer {
