--- a/src/pages/PersonalPage.module.css
+++ b/src/pages/PersonalPage.module.css
@@ -92,11 +92,13 @@
 }
 
 .article_content > div {
-  width: 100px;
+  width: 150px;
   height: 100px;
   border-radius: 10px;
   background-image: url("./img/jk-2.PNG");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .article_big_profile_img {
