Set loading spinner on signinRegister page

--- a/src/components/Spinner.module.css
+++ b/src/components/Spinner.module.css
@@ -1,7 +1,8 @@
-
-.eachSpinner {
-    width: 50px;
-    margin: auto;
-    transform: translateY(100px);
-    display: block;
-  }
+.spinnerBox {
+  position: relative;
+  width: 70px;
+  margin: auto;
+  transform: translateY(375px);
+  display: block;
+  z-index: 2;
+}
