--- a/src/pages/PostingPage.module.css
+++ b/src/pages/PostingPage.module.css
@@ -10,7 +10,7 @@
 }
 
 .wrapper {
-  position: relative;
+  position: absolute;
   overflow: hidden;
   width: 390px;
   height: 750px;
@@ -48,7 +48,6 @@
     bottom: 0;
   }
 }
-
 
 
 .back_btn {
