--- a/src/pages/PostingPage.module.css
+++ b/src/pages/PostingPage.module.css
@@ -121,10 +121,17 @@ input[type="file"] {
   width: 100%;
 }
 input[type="file"] {
+  display: none;
   position: absolute;
   z-index: -1;
   font-size: 17px;
   color: #b8b8b8;
+  margin-right: 1%;
+}
+
+.file_name {
+  color: gray;
+  font-size: 13px;
 }
 .button_wrap {
   position: relative;
