--- a/src/pages/SignInRegister.module.css
+++ b/src/pages/SignInRegister.module.css
@@ -93,6 +93,11 @@
   margin-top: 3%;
 }
 
+input::placeholder,
+::placeholder {
+  font-family:Arial, Helvetica, sans-serif;
+}
+
 .confirm_btn {
   position: absolute;
   transform: translate(150px, 100px);
