--- a/src/pages/SignInMain.module.css
+++ b/src/pages/SignInMain.module.css
@@ -26,7 +26,21 @@
   font-size: 45px;
 }
 
-.input_box,
+.input_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 15%;
+}
+
+.warning {
+  color: aquamarine;
+  padding-bottom: 3%;
+  font-weight: 100;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 18px;
+}
+
 .signin_btn_box {
   display: flex;
   flex-direction: column;
@@ -37,7 +51,6 @@
 .pw_input {
   width: 308px;
   height: 45px;
-  margin-top: 17%;
   background-color: rgba(255, 255, 255, 0.7);
   color: rgba(136, 136, 136, 1);
   font-size: 14px;
@@ -51,7 +64,8 @@
   margin-top: 1.5%;
 }
 
-.signin_btn, .signup_btn {
+.signin_btn,
+.signup_btn {
   width: 327px;
   height: 48px;
   border-radius: 35px;
@@ -72,5 +86,5 @@
   display: flex;
   justify-content: center;
   color: white;
-  padding-top: 45%;
+  padding-top: 30%;
 }
