--- a/src/pages/SignInRegister.module.css
+++ b/src/pages/SignInRegister.module.css
@@ -83,6 +83,12 @@
   position: relative;
 }
 
+.warning {
+  color: #a493ff;
+  padding-bottom: 3%;
+  font-size: 20px;
+}
+
 .input_Q {
   width: 319px;
   height: 45px;
