Fixed a few css

--- a/src/pages/SignInMain.module.css
+++ b/src/pages/SignInMain.module.css
@@ -35,7 +35,7 @@
 }
 
 .warning {
-  color: aquamarine;
+  color: #c5bcfa;
   padding-bottom: 3%;
   font-weight: 100;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
