--- a/src/pages/Chatting.module.css
+++ b/src/pages/Chatting.module.css
@@ -62,7 +62,6 @@
 }
 
 .inbox {
-  /* border: 1px solid red; */
   width: 90px;
   display: flex;
   justify-content: space-between;
@@ -92,25 +91,24 @@
   position: absolute;
 }
 
-.chat_section::-webkit-scrollbar{
+.chat_section::-webkit-scrollbar {
   display: none;
 }
 
-
 .chat_myAnswer {
-  width: 70%;
+  width: 60%;
   height: 5%;
   border-radius: 20px 20px 0px 20px;
   background-color: rgba(81, 51, 245, 1);
   text-align: center;
-  line-height: 2;
+  line-height: 1.5;
+  padding: 2%;
   margin-top: 2%;
   margin-bottom: 1%;
   color: white;
   float: right;
   transform: translate(-20px, 0px);
-  font-family: 'Caveat Brush', cursive;
-
+  font-family: "Caveat Brush", cursive;
 }
 
 .chat_yourAnswer {
@@ -124,9 +122,7 @@
   margin-top: 2%;
   margin-bottom: 1%;
   transform: translate(20px, 0px);
-  font-family: 'Caveat Brush', cursive;
-
-  
+  font-family: "Caveat Brush", cursive;
 }
 
 .date_box {
@@ -147,11 +143,9 @@
 }
 
 footer {
-  
   transform: translate(0px, 580px);
   display: flex;
   justify-content: center;
-
 }
 
 .input_part {
@@ -164,8 +158,7 @@ footer {
   text-align: center;
   font-family: Arial;
   border: none;
-  font-family: 'Caveat Brush', cursive;
-
+  font-family: "Caveat Brush", cursive;
 }
 
 .input_btn {
