--- a/src/pages/Inbox.module.css
+++ b/src/pages/Inbox.module.css
@@ -101,7 +101,7 @@
 .chat_mes_box {
   display: flex;
   flex-direction: column;
-  transform: translate(-80px, 0px);
+  width: 225px;  
 }
 
 .chat_mes_name {
@@ -110,6 +110,12 @@
 
 .chat_mes_text {
   font-size:13px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "Caveat Brush", cursive;
+  padding-top: 3%;
+
 }
 
 
@@ -123,11 +129,11 @@
 }
 
 .chat_counter {
-  width: 15px;
-  height: 15px;
-  border: 1px solid red;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   text-align: center;
+  line-height: 1.9;
   font-size: 10px;
   background-color: red;
   color: white;
