--- a/src/pages/MainBoard.module.css
+++ b/src/pages/MainBoard.module.css
@@ -57,8 +57,8 @@
   background: none;
   border: none;
   color: white;
-  font-size: 17px;
-  margin: 5% 0% 0% 70%;
+  font-size: 35px;
+  transform: translate(320px, 20px);
 }
 
 .name_box {
