--- a/src/pages/PersonalPage.module.css
+++ b/src/pages/PersonalPage.module.css
@@ -108,6 +108,12 @@
   background-size: cover;
 }
 
+.article_big_profile_name {
+  width: 180px;
+  font-weight: 700;
+  padding-left: 2%;
+}
+
 .article_profile_img {
   width: 35px;
   height: 35px;
@@ -137,6 +143,7 @@
   background-color: #a493ff;
   border: none;
   color: white;
+  
 }
 .introduce > h4 {
   padding: 2% 0% 3% 0%;
