--- a/src/pages/Nearby.module.css
+++ b/src/pages/Nearby.module.css
@@ -34,10 +34,9 @@
   -webkit-box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
   overflow-y: scroll;
-
 }
 
-.slide::-webkit-scrollbar{
+.slide::-webkit-scrollbar {
   display: none;
 }
 
@@ -56,9 +55,9 @@
 .chat_btn {
   background: none;
   border: none;
-  color: white;
-  font-size: 17px;
-  margin: 5% 0% 0% 70%;
+  color: #7259f5;
+  font-size: 35px;
+  transform: translate(327px, 20px);
 }
 
 .name_box {
@@ -187,6 +186,5 @@
 }
 
 .like_heart {
-  color: #A493FF;
-
+  color: #a493ff;
 }
