Changed the chat_btn color on mainboard to purple

--- a/src/pages/MainBoard.module.css
+++ b/src/pages/MainBoard.module.css
@@ -56,7 +56,7 @@
 .chat_btn {
   background: none;
   border: none;
-  color: white;
+  color: #7259f5;
   font-size: 35px;
   transform: translate(327px, 20px);
 }
