--- a/src/pages/MainBoard.module.css
+++ b/src/pages/MainBoard.module.css
@@ -34,10 +34,9 @@
   -webkit-box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.5);
   overflow-y: scroll;
-
 }
 
-.slide::-webkit-scrollbar{
+.slide::-webkit-scrollbar {
   display: none;
 }
 
@@ -77,7 +76,7 @@
 .title {
   font-family: "Caveat Brush", cursive;
   font-weight: 200;
-  width: 300px;
+  width: 350px;
   font-size: 45px;
   text-align: left;
   transform: translate(20px, 20px);
@@ -187,6 +186,5 @@
 }
 
 .like_heart {
-  color: #A493FF;
-
+  color: #a493ff;
 }
